--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "jest --watchAll"
   },
   "dependencies": {
+    "@testing-library/dom": "^10.4.0",
     "animate.css": "^4.1.1",
     "query-string": "^9.1.1",
     "react": "^18.3.1",
