--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "query-string": "^9.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "6"
+    "react-router-dom": "^6.28.1"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.26.0",
